wp-content/themes/tcs-responsive/css/challenge-results.css
/* ... */
    #winner .winnerRow .place.client{
        font-size: 18px;
        padding-top: 15px;
        height: 65px;
    }
        #winner .winnerRow .place span{
            font-size: 16px;
            position: relative;
            text-transform: uppercase;
            top: -15px;
        }
        #winner .winnerRow .place.client span{
            font-size: 11px;
            display: inline-block;
        }
    #winner .winnerRow .place.first{
        background-position: 0 0;
    }
    #winner .winnerRow .place.second{
        background-position: 0 -100px;
    }
    #winner .winnerRow .place.third{
        background-position: 0 -200px;
    }
    #winner .winnerRow .place.other{
        background-position: 0 -300px;
    }
    #winner .winnerRow .image{
        margin: 25px 33px 25px 50px;
        width: 200px;
    }
    .TC #winner .winnerRow .image{
        margin: 25px 5px;
    }
    #winner .winnerRow .details{
        width: 460px;
        margin: 25px 0;
        text-align: left;
    }
    .TC #winner .winnerRow .details{
        width: 310px;
        overflow: hidden;
    }
    .develop #winner .winnerRow .details{
        width: 460px;
        margin: 0 0 0 33px;
        text-align: left;
    }
    .TC .develop #winner .winnerRow .details{
        width: 200px;
    }
    .develop #winner .winnerRow .price,
    .develop #winner .winnerRow .point{
        width: 160px;
        text-align: left;
    }
    .TC .develop #winner .winnerRow .price,
    .TC .develop #winner .winnerRow .point{
        width: 135px;
    }
    .develop #winner .winnerRow .point{
        width: 155px;
    }
        #winner .winnerRow .details a{
            display: block;
            font-size: 30px;
            line-height: 65px;
            padding-top: 5px;
        }
        .develop #winner .winnerRow .price span.price{
            display: block;
            font-size: 30px;
            line-height: 50px;
            padding-top: 10px;
            color: #228400;
            font-weight: 600;
        }
        .develop #winner .winnerRow .point span.point{
            display: block;
            font-size: 30px;
            line-height: 50px;
            padding-top: 10px;
            color: #a1a1a1;
            font-weight: 600;
        }
        #winner .winnerRow .details div{
            width: 50%;
            float: left;
        }
            #winner .winnerRow .details div h3{
                font-size: 30px;
                /*Bugfix refactored-challenge-details-77: Change font weight to bold for challenge prizes in results tab*/
                font-weight: bold;
                color: #00aeff;
                display: block;
                line-height: 38px;
            }
            #winner .winnerRow .details div span{
                font-size: 14px;
                line-height: 22px;
                display: block;
                text-align: left;
                padding: 0;
                margin: 0;
            }
            #winner .winnerRow .details div span span.break{
                display: inline;
            }
            #winner .winnerRow .details div span.title,
            #winner .winnerRow .details div span.time{
                color: #666;
            }
            #winner .winnerRow .details div span.title{
                padding-bottom: 20px;
                text-transform: uppercase;
            }
            #winner .winnerRow .details div span.date{
                color: #999;
            }

    #winner .winnerRow .actions{
        padding: 98px 0 0 60px;
        width: 100px;
    }
    .TC #winner .winnerRow .actions{
        padding: 98px 0 0;
        width: 105px;
    }
    .view-challenge-result.develop #winner .winnerRow .actions,
    .TC .develop #winner .winnerRow .actions{
        width: 115px;
        padding: 40px 0 0 0;
    }
        #winner .winnerRow .actions a{
            background: url("../i/winner-actions.png") no-repeat;
            height: 23px;
            padding-left: 33px;
            line-height: 23px;
            font-size: 16px;
            display: block;
            text-align: left;
            margin-bottom: 18px;
        }
        #winner .winnerRow .actions a:hover{
            opacity: .6;
            color: #FF8A00;
        }
        #winner .winnerRow .actions a.view{
            background-position: 0 0;
        }
        #winner .winnerRow .actions a.download{
            background-position: 0 -100px;
        }

        /*showMore*/
        .showMore{
            border-bottom: 1px solid #e7e7e7;
            text-align: center;
            padding: 20px 0;
        }
            .showMore a{
                display: inline-block;
                font-size: 20px;
                padding-bottom: 20px;
                line-height: 20px;
                background: url("../i/arrows-ud.png") no-repeat 50% 28px;
            }

#winner .competitionDetails{
    padding: 20px 0 30px;
    border-bottom: 1px solid #e7e7e7;
    margin-left: auto;
    margin-right: auto;
}
    #winner .competitionDetails > div{
        float: left;
        display: block;
        text-align: center;
        border-left: 1px solid #e7e7e7;
        height: 110px;
        font-size: 0;
    }
    #winner .competitionDetails > div.hide{
      display: none;  
    }
    #winner .competitionDetails > div:first-child{
        border-left: none;
    }
    #winner .competitionDetails > div.clear{
        float: none;
        height: 0;
        border-left: none;
    }
        #winner .competitionDetails > div h2{
            font-family: 'Source Sans Pro', lato, Arial, Helvetica, sans-serif;
            font-size: 14px;
            color: #00aeff;
            text-transform: uppercase;
            line-height: 26px;
            margin: 0;
        }
        .develop #winner .competitionDetails > div h2{
            color: #228400;
        }
/* ... */

